# chuk-mcp-stage

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MANIFEST.in  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: GOOGLE_DRIVE_OAUTH.md  R3F_PREVIEW_SERVER.md  TRANSPORT_MODES.md
examples/: 00_golden_path_ball_throw.py  01_simple_scene.py  02_physics_integration_demo.py  03_camera_shots_demo.py  04_export_formats.py  05_full_physics_workflow.py  verify_google_drive_oauth.py
src/chuk_mcp_stage/: __init__.py  config.py  exporters.py  models.py  physics_bridge.py  scene_manager.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_exporters.py  test_physics_bridge.py  test_scene_manager.py  test_server.py
